# FastAPI-Template

./: README.md
backend/: backend.dockerfile  celery.dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: router.py
backend/app/admin/: conf.py
backend/app/admin/api/: router.py
backend/app/admin/crud/: crud_api.py  crud_casbin.py  crud_config.py  crud_dept.py  crud_dict_data.py  crud_dict_type.py  crud_login_log.py  crud_menu.py  crud_opera_log.py  crud_role.py  crud_user.py  crud_user_social.py
backend/app/admin/model/: __init__.py  sys_api.py  sys_casbin_rule.py  sys_config.py  sys_dept.py  sys_dict_data.py  sys_dict_type.py  sys_login_log.py  sys_menu.py  sys_opera_log.py  sys_role.py  sys_role_menu.py  sys_user.py  sys_user_role.py  sys_user_social.py
backend/app/task/: __init__.py  celery.py  conf.py
backend/common/: enums.py  log.py  model.py  pagination.py  schema.py
backend/common/exception/: errors.py  exception_handler.py
backend/common/response/: response_code.py  response_schema.py
backend/common/security/: jwt.py  permission.py  rbac.py
backend/core/: conf.py  path_conf.py  registrar.py
backend/database/: db_mongo.py  db_mysql.py  db_postgre.py  db_redis.py
backend/middleware/: access_middleware.py  jwt_auth_middleware.py  opera_log_middleware.py  state_middleware.py
backend/scripts/: export.sh  init_data.py  pre_start.sh
backend/utils/: build_tree.py  demo_site.py  encrypt.py  gen_template.py  health_check.py  openapi.py  re_verify.py  redis_info.py  request_parse.py  server_info.py  timezone.py  trace_id.py  type_conversion.py
model/: Makefile
(+60 files in other folders)
