[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.0"
pydantic = "^2.9.2"
fastapi = "^0.115.2"
motor = "^3.6.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
redis = "^5.1.1"
fastapi-pagination = "^0.12.31"
fastapi-limiter = "^0.1.6"
asgi-correlation-id = "^4.3.4"
pydantic-extra-types = "^2.9.0"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.7.0"
pyink = "^24.10.0"
flake8 = "^7.1.1"
typer = "^0.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
